added formating to the form

--- a/index.html
+++ b/index.html
@@ -22,31 +22,36 @@
         This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up <em>now</em> to get started. <br><br> You <em>know</em> you want to
     </div>
     <form>
+      <legend>Let's do this!</legend>
       <div class="name">
-        <div class="first">
-          <label for="first-name">First Name: </label>
+        <div class="first input">
+          <label for="first-name">First Name </label>
           <input type="text" id="first-name" name="first-name">
         </div>
-        <div class="last">
-          <label for="last-name">Last Name: </label>
+        <div class="last input">
+          <label for="last-name">Last Name </label>
           <input type="text" id="last-name" name="last-name">
         </div>
       </div>
-      <div class="email">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email">
+      <div class="second">
+        <div class="email input">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email">
+        </div>
+        <div class="phone-number input">
+          <label for="phone-number">Phone Number</label>
+          <input type="number" id="phone-number" name="phone-number">
+        </div>
       </div>
-      <div class="phone-number">
-        <label for="phone-number">Phone Number</label>
-        <input type="number" id="phone-number" name="phone-number">
-      </div>
-      <div class="password">
-        <label for="password">Password</label>
-        <input type="text" id="password" name="password">
-      </div>
-      <div class="confirm-password">
-        <label for="confirm-password">Password</label>
-        <input type="text" id="confirm-password" name="confirm-password">
+      <div class="third">
+        <div class="password input">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password">
+        </div>
+        <div class="confirm-password input">
+          <label for="confirm-password">Confirm Password</label>
+          <input type="password" id="confirm-password" name="confirm-password">
+        </div>
       </div>
       <div class="button">
         <button type="submit">Create Account</button>
