added font families, color and proper sizes

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <form>
       <legend>Let's do this!</legend>
       <div class="name">
-        <div class="first input">
+        <div class="first-name input">
           <label for="first-name">First Name </label>
           <input type="text" id="first-name" name="first-name">
         </div>
-        <div class="last input">
+        <div class="last-name input">
           <label for="last-name">Last Name </label>
           <input type="text" id="last-name" name="last-name">
         </div>
@@ -53,12 +53,14 @@
           <input type="password" id="confirm-password" name="confirm-password">
         </div>
       </div>
+    </form>
+    <div class="last">
       <div class="button">
         <button type="submit">Create Account</button>
       </div>
-    </form>
-    <div class="account">
-      Already have an account? Log in
+      <div class="account">
+        Already have an account? Log in
+      </div>
     </div>
   </div>
 </body>
