--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <input type="password" id="confirm-password" name="confirm-password">
         </div>
       </div>
+      <div class="error-container"></div>
     </form>
     <div class="last">
       <div class="button">
