--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
       <div class="button">
         <button type="submit">Create Account</button>
       </div>
-      <div class="account">
-        Already have an account? Log in
+      <div class="last-text">
+        <div class="account">
+          Already have an account?
+        </div>
+        <a id="login">Log in</a>
       </div>
     </div>
   </div>
